# cfn-service-catalog-portfolio-share

./: Makefile  README.md  buildspec.yml  package.sh  pyproject.toml
cfn_service_catalog_portfolio_share/: main.py
cfn_service_catalog_portfolio_share/cfn_service_catalog_portfolio_share/: main.py
cfn_service_catalog_portfolio_share/utils/: sanitise_properties.py
ci/: codepipeline.yml
scripts/: pipeline.sh
service_catalog_portfolio_share/cfn_service_catalog_portfolio_share/: main.py
service_catalog_portfolio_share/cfn_service_catalog_portfolio_share/utils/: sanitise_properties.py
stacks/service-catalog-account/: cfn-service-catalog-portfolio-share.yml  parameters.json
tests/utils/: test_sanitise_properties.py
